--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@dqbd/tiktoken": "^1.0.2",
     "@tabler/icons-react": "^2.9.0",
     "eventsource-parser": "^0.1.0",
+    "grammy": "^1.27.0",
     "i18next": "^22.4.13",
-    "next": "13.2.4",
+    "next": "^14.2.4",
     "next-i18next": "^13.2.2",
     "openai": "^3.2.1",
     "react": "18.2.0",
@@ -28,7 +29,8 @@
     "rehype-mathjax": "^4.0.2",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "vercel-grammy": "^1.0.0"
   },
   "devDependencies": {
     "@mozilla/readability": "^0.4.4",
